--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
-  - gcloud auth activate-service-accout --key-file service-account.json
+  - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project mult-k8
   - glcoud config set compute/zone europe-central2-a
   - gcloud container clusters get-credentials multi-cluster
