--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -33,7 +33,7 @@ spec:
             - name: PGPASSWORD
               valueFrom: 
                 secretKeyRef:
-                  name: pgapassword
+                  name: pgpassword
                   key: PGPASSWORD
 
             
