--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -29,7 +29,7 @@ spec:
             - name: POSTGRES_PASSWORD
               valueFrom: 
                 secretKeyRef:
-                  name: pgapassword
+                  name: pgpassword
                   key: PGPASSWORD
 
 
